@@ -10,8 +10,6 @@ supposed to be integrated in blockem at some point in the future:
    "think" the next move)
  + It should be possible to generate doxygen. Add it to the makefiles
  + Installer for the windows platform
- + There's no need to compile the test app with all the gui libraries and flags
-   Have a look at configure.ac and src/test/Makefile.am to fix it
  + keep history of the moves and offer the user the possibility to go back
    and resume an old game
  + Add option to play a game which aim is allocating all the pieces on the 
